added programming lang to html and created css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <html>
   <head>
     <title id="title">Joshua Sheng</title>
+    <link rel="stylesheet" href="main.css">
+    <meta charset="utf-8">
   <body>
+    <header>
+      <h1 id="header_text">My first website!</h1>
+    </header>
     <main id="main">
-      <h1>My first website!</h1>
+      <div id="header_placeholder"></div>
       <p>This is the first (actually second) website that I've made, and it's all about me!</p>
       <br>
       <h2> Who Am I? </h2>
-      <p> My name is Joshua Sheng, and I'm a student graduating grade 12 this year. My resolution for this summer is to learn python!
+      <p> My name is Joshua Sheng, and I'm a student graduating grade 12 this year. My resolution for this summer is to learn to code!
           <br>
           Here's a picture of me.
       </p>
-      <figure>
-        <img src="" alt="A picture of Joshua Sheng" id="mypicture">
+      <figure id="picture_div">
+        <img src="https://live.staticflickr.com/52/174325246_520999190f_b.jpg" alt="A picture of Joshua Sheng" id="mypicture">
+        <figcaption> This is what I look like! </figcaption>
       </figure>
+      <section class="about_me_section">
+      <h2> My hobbies </h2>
+      <ul>
+        <li> Programming </li>
+        <li> League of Legends </li>
+        <li> Chess </li>
+        <li> Violin </li>
+        <li> Travelling </li>
+        <li> Reading </li>
+      </ul>
+    </section>
+      <h2> Programming Languages I know: </h2>
+      <ul>
+        <li> Java
+          <ul>
+            <li> I learned this one in Grade 11 </li>
+          </ul>
+        </li>
+        <li> Python </li>
+        <li> HTML (Not really a programming language, but ¯\_(ツ)_/¯)</li>
+        <li> CSS (Again, not really a programming language, but ¯\_(ツ)_/¯) </li>
+      </ul>
     </main>
   </body>
 </html>
