made the website stop looking like a 5 year old child designed it lol

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
   <head>
     <title id="title">Joshua Sheng</title>
@@ -5,10 +6,15 @@
     <meta charset="utf-8">
   <body>
     <header>
-      <h1 id="header_text">My first website!</h1>
+      <h1 id="header_text">Joshua Sheng</h1>
+      <ul id="navbar">
+        <li class="navbar-option active"><a href="">Home</a></li>
+        <li class="navbar-option"><a href="">Projects</a></li>
+        <li class="navbar-option"><a href="">Contact</a></li>
+      </ul>
     </header>
     <main id="main">
-      <div id="header_placeholder"></div>
+      <h1 style="text-align: center; padding-top: 150px;">Home</h1>
       <p>This is the first (actually second) website that I've made, and it's all about me!</p>
       <br>
       <h2> Who Am I? </h2>
@@ -21,27 +27,31 @@
         <figcaption> This is what I look like! </figcaption>
       </figure>
       <section class="about_me_section">
-      <h2> My hobbies </h2>
-      <ul>
-        <li> Programming </li>
-        <li> League of Legends </li>
-        <li> Chess </li>
-        <li> Violin </li>
-        <li> Travelling </li>
-        <li> Reading </li>
-      </ul>
-    </section>
-      <h2> Programming Languages I know: </h2>
-      <ul>
-        <li> Java
+        <section class="myhobbies">
+          <h2 style="text-decoration: underline;"> My hobbies </h2>
           <ul>
-            <li> I learned this one in Grade 11 </li>
+            <li> Programming </li>
+            <li> League of Legends </li>
+            <li> Chess </li>
+            <li> Violin </li>
+            <li> Travelling </li>
+            <li> Reading </li>
           </ul>
-        </li>
-        <li> Python </li>
-        <li> HTML (Not really a programming language, but ¯\_(ツ)_/¯)</li>
-        <li> CSS (Again, not really a programming language, but ¯\_(ツ)_/¯) </li>
-      </ul>
+        </section>
+        <section class="programming-languages">
+        <h2 style="text-decoration: underline;"> Programming Languages I know: </h2>
+        <ul>
+          <li> Java
+            <ul style="padding-top: 0px;">
+              <li> I learned this one in Grade 11 </li>
+            </ul>
+          </li>
+          <li> Python </li>
+          <li> HTML (Not really a programming language, but ¯\_(ツ)_/¯)</li>
+          <li> CSS (Again, not really a programming language, but ¯\_(ツ)_/¯) </li>
+        </ul>
+        </section>
+      </section>
     </main>
   </body>
 </html>
